--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -10,6 +10,9 @@ metadata:
     fluxcd.io/automated: "true"
     fluxcd.io/tag.init: regex:^3.10.*
     fluxcd.io/tag.podinfod: glob:3.2.*
+    fluxcd.io/locked: 'true'
+    fluxcd.io/locked_msg: 3.2.2 does not work for us
+    fluxcd.io/locked_user: Nguyen, Steve <stnguyenn@gmail.com>
 spec:
   strategy:
     rollingUpdate:
